--- a/links.md.html
+++ b/links.md.html
@@ -152,7 +152,9 @@ Programming
 - [nanoflann](https://github.com/jlblancoc/nanoflann)
 - [nanort](https://github.com/lighttransport/nanort)
 - [spdlog](https://github.com/gabime/spdlog)
+- [cereal](https://github.com/USCiLab/cereal)
 - [picojson](https://github.com/kazuho/picojson)
+- [cmdline](https://github.com/tanakh/cmdline)
 
 ## Deep learning
 - [PyTorch](https://pytorch.org/)
