--- a/dev.md.html
+++ b/dev.md.html
@@ -310,7 +310,7 @@ set cm=blowfish2 | set an encryption method
 
 ### サブディレクトリの検索
 ~~~
-:vimgrep WORD **
+:vimgrep WORD **/*.h **/*.cpp
 ~~~
 
 ## diff
