--- a/links.md.html
+++ b/links.md.html
@@ -43,6 +43,12 @@ Develop
 =======================================================
 <div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
 
+## Shell
+- [msys2](http://www.msys2.org/)
+- [pacman](https://wiki.archlinux.org/index.php/pacman)
+- [translate-shell](https://www.soimort.org/translate-shell/)
+- [w3m](http://w3m.sourceforge.net/index.ja.html)
+
 ## フォント
 - [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
 - [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
@@ -77,12 +83,6 @@ Develop
 - [draw.io](https://www.draw.io/)
 - [websequencediagrams](https://www.websequencediagrams.com/)
 
-## Shell
-- [msys2](http://www.msys2.org/)
-- [pacman](https://wiki.archlinux.org/index.php/pacman)
-- [translate-shell](https://www.soimort.org/translate-shell/)
-- [w3m](http://w3m.sourceforge.net/index.ja.html)
-
 ## graphviz
 - [graphviz](https://www.graphviz.org/)
 - [Graphvizとdot言語でグラフを描く方法のまとめ](https://qiita.com/rubytomato@github/items/51779135bc4b77c8c20d)
@@ -105,9 +105,8 @@ Programming
 =======================================================
 <div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
 
-## Lang, compiler, IDE
+## Compiler, IDE
 - [clang](https://clang.llvm.org/)
-- [python](https://www.python.org/)
 - [visualstudio](https://www.visualstudio.com/ja/)
 - [androidstudio](https://developer.android.com/studio/?hl=ja)
 - [cmake](https://cmake.org/)
@@ -127,39 +126,50 @@ Programming
   - [Doc](https://tortoisesvn.net/docs/release/TortoiseSVN_ja/index.html)
 
 ## C++
-- [stdman](https://github.com/jeaye/stdman)
-- [cpprefjp](https://cpprefjp.github.io/)
 - [ja.cppreference.com](http://ja.cppreference.com/w/)
-- [en.cppreference.com](http://en.cppreference.com/w/) [offline](http://en.cppreference.com/w/Cppreference:Archives)
+- [en.cppreference.com](http://en.cppreference.com/w/)
+  | [offline](http://en.cppreference.com/w/Cppreference:Archives)
+- [cpprefjp](https://cpprefjp.github.io/)
+- [stdman](https://github.com/jeaye/stdman)
 - [cpp-pocketref](https://github.com/cpp-pocketref/sample-code)
 - [C++11 - Wikipedia](https://ja.wikipedia.org/wiki/C%2B%2B11)
 - [C++11, C++14 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
-## Lib
+<meta name="keywords" content="*memo_lib*">
+## Library
+- [glm](https://glm.g-truc.net/)
+  | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
+  | [グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
+- [OpenCV](https://opencv.org/)
+  | [doc](https://docs.opencv.org/master/)
+  | [cookbook](http://opencv.jp/cookbook/index.html)
 - [glfw](http://www.glfw.org/)
 - [gl3w](https://github.com/skaslev/gl3w)
 - [imgui](https://github.com/ocornut/imgui)
 - [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
-- [glm](https://glm.g-truc.net/)
-  | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
-  | [グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
 - [dlib](http://dlib.net/)
 - [Eigen](http://eigen.tuxfamily.org/)
-- [OpenCV](https://opencv.org/)
-  | [doc](https://docs.opencv.org/master/)
 - [stb](https://github.com/nothings/stb)
 - [nanoflann](https://github.com/jlblancoc/nanoflann)
 - [nanort](https://github.com/lighttransport/nanort)
+- [cmdline](https://github.com/tanakh/cmdline)
 - [spdlog](https://github.com/gabime/spdlog)
 - [cereal](https://github.com/USCiLab/cereal)
 - [picojson](https://github.com/kazuho/picojson)
-- [cmdline](https://github.com/tanakh/cmdline)
+- [MessagePack](https://msgpack.org/)
+- [Protocol Buffers](https://developers.google.com/protocol-buffers/)
+
+## Python
+- [python](https://www.python.org/)
+- [NumPy](https://algorithm.joho.info/programming/python/numpy-sample-code/)
+- [matplotlib](https://qiita.com/skotaro/items/08dc0b8c5704c94eafb9)
 
 ## Deep learning
-- [PyTorch](https://pytorch.org/)
 - [Anaconda](https://www.anaconda.com/)
   | [cloud](https://anaconda.org/)
+- [PyTorch](https://pytorch.org/)
+- [TensorFlow](https://www.tensorflow.org/)
 
 </div>
 
