--- a/os.md.html
+++ b/os.md.html
@@ -256,7 +256,6 @@ pacman -S msys2-devel
 pacman -S mingw-w64-i686-toolchain
 ~~~
 
-<meta name="keywords" content="*memo_python*">
 <meta name="keywords" content="*memo_pip*">
 ~~~
 pip3 -V                       # show version
@@ -265,6 +264,7 @@ pip3 search package_name
 pip3 install package_name
 pip3 install -U package_name  # update
 pip3 uninstall package_name
+python -m pip install --upgrade pip  # upgrade pip
 ~~~
 
 <meta name="keywords" content="*memo_cygwin*">
