--- a/links.md.html
+++ b/links.md.html
@@ -1,10 +1,13 @@
+<meta vim:set syntax=markdown:>
 <meta charset="utf-8">
+<link rel="stylesheet" href="default.css">
+
 **Links**
 
 <meta name="keywords" content="*memo_links*">
 Links
 =======================================================
-<div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
+<div id="col3">
 
 ## 検索
 - [Google](https://www.google.co.jp/)
@@ -41,7 +44,7 @@ Links
 
 Develop
 =======================================================
-<div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
+<div id="col2">
 
 ## Shell
 - [msys2](http://www.msys2.org/)
@@ -82,11 +85,9 @@ Develop
 - [inkscape](https://inkscape.org/ja/)
 - [draw.io](https://www.draw.io/)
 - [websequencediagrams](https://www.websequencediagrams.com/)
-
-## graphviz
 - [graphviz](https://www.graphviz.org/)
-- [Graphvizとdot言語でグラフを描く方法のまとめ](https://qiita.com/rubytomato@github/items/51779135bc4b77c8c20d)
-- [code snippets: graphviz](http://miffysora.wikidot.com/graphviz)
+  | [doc](https://qiita.com/rubytomato@github/items/51779135bc4b77c8c20d)
+  | [code](http://miffysora.wikidot.com/graphviz)
 
 ## Windows
 - [chocolatey](https://chocolatey.org/)
@@ -103,14 +104,14 @@ Develop
 
 Programming
 =======================================================
-<div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
+<div id="col2">
 
 ## Compiler, IDE
 - [clang](https://clang.llvm.org/)
 - [visualstudio](https://www.visualstudio.com/ja/)
 - [androidstudio](https://developer.android.com/studio/?hl=ja)
 - [cmake](https://cmake.org/)
-  - [variables](https://cmake.org/cmake/help/v3.12/manual/cmake-variables.7.html)
+  | [variables](https://cmake.org/cmake/help/v3.12/manual/cmake-variables.7.html)
 - [markdeep](http://casual-effects.com/markdeep/)
 
 ## Git
@@ -123,7 +124,7 @@ Programming
 
 ## SVN
 - [TortoiseSVN](https://tortoisesvn.net/)
-  - [Doc](https://tortoisesvn.net/docs/release/TortoiseSVN_ja/index.html)
+  | [Doc](https://tortoisesvn.net/docs/release/TortoiseSVN_ja/index.html)
 
 ## C++
 - [ja.cppreference.com](http://ja.cppreference.com/w/)
@@ -162,18 +163,23 @@ Programming
 
 ## Python
 - [python](https://www.python.org/)
+  | [基礎文法とサンプル集](https://algorithm.joho.info/programming/python/sample-code-py/)
 - [NumPy](https://algorithm.joho.info/programming/python/numpy-sample-code/)
 - [matplotlib](https://qiita.com/skotaro/items/08dc0b8c5704c94eafb9)
+- scipy
+- scikit-learn
+- scikit-image
 
 ## Deep learning
 - [Anaconda](https://www.anaconda.com/)
   | [cloud](https://anaconda.org/)
 - [PyTorch](https://pytorch.org/)
 - [TensorFlow](https://www.tensorflow.org/)
+- [機械学習ライブラリまとめ](https://techacademy.jp/magazine/17303)
 
 </div>
 
-<link rel="stylesheet" href="links.css">
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
-<meta vim:syntax=md
->
+<script>markdeepOptions={tocStyle:'none'}</script>
+<style class="fallback">body{visibility:hidden}</style>
+<script src="markdeep.min.js"></script>
+<script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
