--- a/stock.md.html
+++ b/stock.md.html
@@ -1,4 +1,7 @@
+<meta vim:set syntax=markdown:>
 <meta charset="utf-8">
+<link rel="stylesheet" href="default.css">
+
 **Stock**
 
 <meta name="keywords" content="*memo_stock*">
@@ -22,6 +25,6 @@
 ![世界の株価指数 (5年)]("http://chart.yahoo.co.jp/?code=998407.O&tm=5y&type=l&log=off&size=m&over=&add=&comp=^DJI,^GDAXI,^HSI")
 ![世界の株価指数 (10年)]("http://chart.yahoo.co.jp/?code=998407.O&tm=ay&type=l&log=off&size=m&over=&add=&comp=^DJI,^GDAXI,^HSI")
 
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
-<meta vim:syntax=md
->
+<style class="fallback">body{visibility:hidden}</style>
+<script src="markdeep.min.js"></script>
+<script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
