--- a/vcs.md.html
+++ b/vcs.md.html
@@ -1,4 +1,7 @@
+<meta vim:set syntax=markdown:>
 <meta charset="utf-8">
+<link rel="stylesheet" href="default.css">
+
 **VCS**
 
 <meta name="keywords" content="*memo_vcs*">
@@ -58,6 +61,7 @@ git add {file}
 git rm --cached    {file} # untrack file
 git rm --cached -r {dir}  # untrack dir
 git ls-files              # list tracked files
+git ls-files -o --directory # list untracked files
 ~~~
 
 ### chmod (Windows)
@@ -293,6 +297,6 @@ svn
 - [TortoiseSVN](https://tortoisesvn.net/)
   - [Doc](https://tortoisesvn.net/docs/release/TortoiseSVN_ja/index.html)
 
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
-<meta vim:syntax=md
->
+<style class="fallback">body{visibility:hidden}</style>
+<script src="markdeep.min.js"></script>
+<script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
