--- a/memo.md.html
+++ b/memo.md.html
@@ -1,4 +1,7 @@
+<meta vim:set syntax=markdown:>
 <meta charset="utf-8">
+<link rel="stylesheet" href="default.css">
+
 **Memo**
 
 <meta name="keywords" content="*memo_top*">
@@ -6,6 +9,6 @@
 ![Image](images/top.jpg)
 ![日経平均 (3ヵ月)]("http://chart.yahoo.co.jp/?code=998407.O&tm=3m&type=c&log=off&size=m&over=m65,m130&add=r,ss,fs&comp=")
 
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
-<meta vim:syntax=md
->
+<style class="fallback">body{visibility:hidden}</style>
+<script src="markdeep.min.js"></script>
+<script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
