--- a/soft.md.html
+++ b/soft.md.html
@@ -1,4 +1,7 @@
+<meta vim:set syntax=markdown:>
 <meta charset="utf-8">
+<link rel="stylesheet" href="default.css">
+
 **Software**
 
 <meta name="keywords" content="*memo_soft*">
@@ -157,6 +160,6 @@ Ctrl + R
 ## 法線の反転
 選択 > Faces > Flip Normals
 
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
-<meta vim:syntax=md
->
+<style class="fallback">body{visibility:hidden}</style>
+<script src="markdeep.min.js"></script>
+<script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
