--- a/links.md.html
+++ b/links.md.html
@@ -40,6 +40,21 @@ Links
 - [楽天市場]("http://www.rakuten.co.jp/")
 - [価格.com]("http://www.kakaku.com/")
 
+## News
+- [読売新聞](http://www.yomiuri.co.jp/)
+- [朝日新聞](http://www.asahi.com/)
+- [日本経済新聞](http://www.nikkei.com/)
+- [PC Watch](http://pc.watch.impress.co.jp/)
+- [スラッシュドット](http://slashdot.jp/)
+- [TechCrunch](http://jp.techcrunch.com/)
+- [Slashdot](http://slashdot.org/)
+
+## Research
+- [Ke-Sen Huang](http://kesen.realtimerendering.com/)
+
+## Data
+- [icooon-mono](http://icooon-mono.com/)
+
 </div>
 
 Develop
@@ -166,9 +181,9 @@ Programming
   | [基礎文法とサンプル集](https://algorithm.joho.info/programming/python/sample-code-py/)
 - [NumPy](https://algorithm.joho.info/programming/python/numpy-sample-code/)
 - [matplotlib](https://qiita.com/skotaro/items/08dc0b8c5704c94eafb9)
-- scipy
-- scikit-learn
-- scikit-image
+- [scipy](https://www.scipy.org/)
+- [scikit-learn](http://scikit-learn.org/stable/)
+- [scikit-image](https://scikit-image.org/)
 
 ## Deep learning
 - [Anaconda](https://www.anaconda.com/)
@@ -176,6 +191,9 @@ Programming
 - [PyTorch](https://pytorch.org/)
 - [TensorFlow](https://www.tensorflow.org/)
 - [機械学習ライブラリまとめ](https://techacademy.jp/magazine/17303)
+
+## HTML
+- [とほほのWWW入門](http://www.tohoho-web.com/www.htm)
 
 </div>
 
