--- a/memo.md.html
+++ b/memo.md.html
@@ -1,14 +1,23 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
 <link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="util.css">
 
 **Memo**
 
 <meta name="keywords" content="*memo_top*">
 
 ![Image](images/top.jpg)
+
+<div id="col2">
+
+<div id="clock"></div>
 ![日経平均 (3ヵ月)]("http://chart.yahoo.co.jp/?code=998407.O&tm=3m&type=c&log=off&size=m&over=m65,m130&add=r,ss,fs&comp=")
+
+</div>
 
 <style class="fallback">body{visibility:hidden}</style>
 <script src="markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
+<script src="util.js"></script>
+<script>js_init()</script>
