--- a/links.md.html
+++ b/links.md.html
@@ -161,7 +161,9 @@ Programming
   | [doc](https://docs.opencv.org/master/)
   | [cookbook](http://opencv.jp/cookbook/index.html)
 - [glfw](http://www.glfw.org/)
-- [gl3w](https://github.com/skaslev/gl3w)
+- [glew](http://glew.sourceforge.net/)
+  | [gl3w](https://github.com/skaslev/gl3w)
+  | [glad](https://github.com/Dav1dde/glad)
 - [imgui](https://github.com/ocornut/imgui)
 - [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
 - [dlib](http://dlib.net/)
