--- a/dev.md.html
+++ b/dev.md.html
@@ -76,6 +76,10 @@ P *  | prefix -        | hrizontal split pane
 P *  | prefix &brvbar; | vertical split pane
 P *  | prefix [HJKL]   | resize the current pane
 P *  | prefix [hjkl]   | move to a pane
+C    | prefix [        | enter copy mode
+C    | V               | start copy
+C    | ENTER           | end copy
+C    | prefix ]        | paste
 
 - * my key maps
 
