--- a/dev.md.html
+++ b/dev.md.html
@@ -5,6 +5,14 @@
 **Develop**
 
 <meta name="keywords" content="*memo_dev*">
+Dev
+=======================================================
+      | msys2-32 | msys2-64 | native
+------|----------|----------|--------
+cmake | o        | o        | o
+git   | o        |          | o
+vim   | o        |          |  
+gvim  |          |          | o
 
 <meta name="keywords" content="*memo_colors*">
 Settings 256 colors for vim, tmux, mintty
